Added apt configuration for Gnome flatpak plugin.

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -8,5 +8,6 @@
 - name: Install Gnome Software plugin for flatpak
   apt:
     name: gnome-software-plugin-flatpak
+    allow-remove-essential: yes
     state: present
   become: yes
